Changed App Styles

--- a/src/app/components/Second/Second.scss
+++ b/src/app/components/Second/Second.scss
@@ -1,5 +1,5 @@
 .outside{
-    // background-color: lightseagreen;
+    // background-color: blue;
     margin-bottom: 10px;
     padding: 4rem 0;
     .inner{
