--- a/src/app/components/First/First.scss
+++ b/src/app/components/First/First.scss
@@ -1,16 +1,10 @@
 .outer{
-    
-    margin-bottom: 10px;
-    padding: 4rem 0;
-    // background-color: lightseagreen;
-    // width: 100vw;
+    padding: 5.5rem 0;
     .inner{
-        // background-color: pink;
         padding:0 9.5rem;
         display: flex;
         align-items: center;
         .left{
-            // background-color: yellow;
             display: flex;
             flex-direction: column;
             padding-right: 10px;
@@ -23,10 +17,19 @@
             }
         }
         .right{
-            // background-color: blue;
+            // background-color: red;
             padding-left: 10px;
+            position: relative;
             img{
                 width: 30rem;
+                position: relative;
+                z-index: 1;
+            }
+            video{
+                position: absolute;
+                right: 0;
+                top: 55px;
+                // width: 85%;
             }
         }
     }
