--- a/src/app/components/Form/Form.scss
+++ b/src/app/components/Form/Form.scss
@@ -1,40 +1,43 @@
 .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: .7rem;
+  h3 {
+    font-size: 1.15rem;
+    margin-bottom: 1rem;
+  }
 
-    h3 {
-      font-size: 1.25rem;
-      margin-bottom: 1rem;
+  .details {
+    display: flex;
+    gap: 5px;
+    width: 40vw;
+
+    input {
+      flex: 1;
+      padding: 0.4rem 1rem;
+      font-size: 1rem;
+      border-radius: 5px;
+      border: 1px solid rgba(128, 128, 128, 0.8);
+      background-color: rgba(38, 38, 38, 0.5);
+      color: rgba(128, 128, 128, 0.8);
     }
 
-    .details {
-      display: flex;
-      gap: 10px;
-      width: 65%;
+    button {
+      margin: 0;
+      padding: 0.8rem 1.5rem;
+      font-size: 1.5rem;
+      font-weight: 500;
+      color: white;
+      background-color: #e50914;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
 
-      input {
-        flex: 1;
-        padding: 1rem;
-        font-size: 1rem;
-        border-radius: 5px;
-        border: 1px solid white;
-       background: transparent;
-      }
-
-      button {
-        padding: 1rem 1.5rem;
-        font-size: 1rem;
-        color: white;
-        background-color: #e50914;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-
-        &:hover {
-          background-color: #f40612;
-        }
+      &:hover {
+        background-color: #a4040c;
       }
     }
   }
+}
