--- a/src/app/components/Dropdown/Dropdown.scss
+++ b/src/app/components/Dropdown/Dropdown.scss
@@ -1,20 +1,20 @@
-.dropdown {
-  border: 1px solid white;
-  border-radius: 5px;
-  display: inline-block;
-  padding: 5px 15px;
-  width: 5.1rem;
-  display: flex;
-  align-items: center;
-  background-color: rgba(38, 38, 38, 0.5);
+// .dropdown {
+//   border: 1px solid white;
+//   border-radius: 5px;
+//   display: inline-block;
+//   padding: 5px 15px;
+//   width: 5.1rem;
+//   display: flex;
+//   align-items: center;
+//   background-color: rgba(38, 38, 38, 0.5);
 
-  .dropdown-select {
-    background: transparent;
-    color: white;
-    border: none;
-    cursor: pointer;
-    option {
-      color: black;
-    }
-  }
-}
+//   .dropdown-select {
+//     background: transparent;
+//     color: white;
+//     border: none;
+//     cursor: pointer;
+//     option {
+//       color: black;
+//     }
+//   }
+// }
