--- a/src/app/components/Form/Form.scss
+++ b/src/app/components/Form/Form.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: .7rem;
+  padding-bottom: 0.7rem;
   h3 {
     font-size: 1.15rem;
     margin-bottom: 1rem;
@@ -12,32 +12,5 @@
     display: flex;
     gap: 5px;
     width: 40vw;
-
-    input {
-      flex: 1;
-      padding: 0.4rem 1rem;
-      font-size: 1rem;
-      border-radius: 5px;
-      border: 1px solid rgba(128, 128, 128, 0.8);
-      background-color: rgba(38, 38, 38, 0.5);
-      color: rgba(128, 128, 128, 0.8);
-    }
-
-    button {
-      margin: 0;
-      padding: 0.8rem 1.5rem;
-      font-size: 1.5rem;
-      font-weight: 500;
-      color: white;
-      background-color: #e50914;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-
-      &:hover {
-        background-color: #a4040c;
-      }
-    }
   }
 }
