--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+* {
   padding: 0;
   margin: 0;
   font-family: Noto Sans;
+  box-sizing: border-box;
 }
 
-html{
+html {
   color: white;
   background-color: black;
 }
