--- a/src/app/components/Form/Form.scss
+++ b/src/app/components/Form/Form.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 0.7rem;
+  margin: 1.5rem 0;
   h3 {
     font-size: 1.15rem;
     margin-bottom: 1rem;
