--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -54,6 +54,21 @@
         font-size: 1.5rem;
         margin-bottom: 1rem;
       }
+
+      .movie {
+        padding: 5px 10px;
+        border-radius: 5px;
+        font-size: 1.2rem;
+        color: white;
+        background-color: red;
+        border: none;
+        cursor: pointer;
+        transition: 0.2s ease-in-out;
+        text-decoration: none;
+        &:hover {
+          background-color: rgb(215, 12, 12);
+        }
+      }
     }
   }
 }
