--- a/src/app/Movies.module.scss
+++ b/src/app/Movies.module.scss
@@ -4,32 +4,39 @@
   flex-direction: column;
   gap: 1rem;
 
-  .nav {
-    margin: 0 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    p {
-      flex: 1;
-      font-size: 2.5rem;
-      text-align: center;
-      font-weight: bold;
-    }
-  }
+  // .nav {
+  //   margin: 0 2rem;
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   gap: 1rem;
+  //   p {
+  //     flex: 1;
+  //     font-size: 2.5rem;
+  //     text-align: center;
+  //     font-weight: bold;
+  //   }
+  // }
 
   .content {
     padding: 10px;
-
     .section {
       padding: 0 1rem;
       margin-bottom: 1rem;
-
       .cards {
         padding: 1rem;
         display: flex;
         gap: 1.5rem;
-
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        &::-webkit-scrollbar{
+            display: none;
+        }
+        button{
+            background: transparent;
+            color: white;
+            border: none;
+        }
         .card {
           display: flex;
           flex-direction: column;
