--- a/src/app/movies/Movie.module.scss
+++ b/src/app/movies/Movie.module.scss
@@ -5,32 +5,50 @@
   justify-content: center;
   gap: 1rem;
 
-  .data {
-    margin: 1rem 8rem;
+  .content {
     display: flex;
-    box-shadow: 0 0 8px rgb(157, 155, 155);
-    border-radius: 1rem;
-    .info {
-      padding: 0 3rem;
-      h1 {
-        font-size: 3.7rem;
-        padding: 10px 0;
-        color: rgb(201, 31, 31);
-      }
-      p {
-        color: rgb(200, 197, 197);
-        font-size: 1.3rem;
-        padding: 8px 0;
-      }
-    }
-    img {
-      padding: 10px;
-      height: 28rem;
-      border-radius: 1rem;
-    }
-  }
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-  button {
-    width: 5rem;
+    .data {
+      margin: 1rem 8rem;
+      display: flex;
+      box-shadow: 0 0 8px rgb(157, 155, 155);
+      border-radius: 1rem;
+      .info {
+        padding: 0 3rem;
+        h1 {
+          font-size: 3.7rem;
+          padding: 10px 0;
+          color: rgb(201, 31, 31);
+        }
+        p {
+          color: rgb(200, 197, 197);
+          font-size: 1.3rem;
+          padding: 8px 0;
+        }
+      }
+      img {
+        padding: 10px;
+        height: 28rem;
+        border-radius: 1rem;
+      }
+    }
+
+    a {
+      color: white;
+      text-decoration: none;
+      border: none;
+      padding: 5px 10px;
+      background-color: red;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: 0.2s ease-in-out;
+      &:hover {
+        transform: scale(1.05);
+        background-color: rgb(228, 19, 19);
+      }
+    }
   }
 }
