--- a/src/app/Movies.module.scss
+++ b/src/app/Movies.module.scss
@@ -9,42 +9,58 @@
     .section {
       padding: 0 1rem;
       margin-bottom: 1rem;
-      .cards {
-        padding: 1rem;
+      .cardsContainer {
         display: flex;
-        gap: 1.5rem;
-        overflow-x: scroll;
-        scroll-behavior: smooth;
-        &::-webkit-scrollbar{
-            display: none;
+        align-items: center;
+        .buttons {
+          background: transparent;
+          color: white;
+          border: none;
+          transition: 0.2s ease-in-out;
+          cursor: pointer;
+          z-index: 1;
+          &:hover {
+            transform: scale(1.5);
+            color: red;
+          }
         }
-        button{
+        .cards {
+          padding: 1rem;
+          display: flex;
+          gap: 1.5rem;
+          overflow-x: scroll;
+          scroll-behavior: smooth;
+          &::-webkit-scrollbar {
+            display: none;
+          }
+          button {
             background: transparent;
             color: white;
             border: none;
-        }
-        .card {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          align-items: center;
-          border-radius: 10px;
-          cursor: pointer;
-          transition: 0.2s ease-in-out;
-          &:hover {
-            transform: scale(1.1);
-            box-shadow: 0px 0px 8px rgb(248, 248, 249);
           }
-          p {
-            color: rgb(40, 157, 203);
-            padding-bottom: 10px;
-            font-size: 1.2rem;
-          }
-
-          img {
+          .card {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
             border-radius: 10px;
-            width: 220px;
-            height: 300px;
+            cursor: pointer;
+            transition: 0.2s ease-in-out;
+            &:hover {
+              transform: scale(1.1);
+              box-shadow: 0px 0px 8px rgb(248, 248, 249);
+            }
+            p {
+              color: rgb(40, 157, 203);
+              padding-bottom: 10px;
+              font-size: 1.2rem;
+            }
+
+            img {
+              border-radius: 10px;
+              width: 220px;
+              height: 300px;
+            }
           }
         }
       }
