--- a/src/app/Movies.module.scss
+++ b/src/app/Movies.module.scss
@@ -67,3 +67,33 @@
     }
   }
 }
+
+.error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  .box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    border-radius: 1rem;
+    transition: 0.5s ease-in-out;
+    border: 1px solid rgb(56, 54, 54);
+    &:hover {
+      box-shadow: 0 0 10px grey;
+      transform: scale(1.1);
+    }
+    h1 {
+      font-size: 6rem;
+    }
+    p {
+      font-size: 2rem;
+    }
+    svg {
+      margin: 1rem;
+    }
+  }
+}
