--- a/src/app/Movies.module.scss
+++ b/src/app/Movies.module.scss
@@ -5,14 +5,20 @@
   gap: 1rem;
 
   .content {
-    padding: 10px;
     .section {
       padding: 0 1rem;
       margin-bottom: 1rem;
+      h1 {
+        padding: 0 1.5rem;
+      }
+
       .cardsContainer {
+        // background-color: grey;
         display: flex;
         align-items: center;
+
         .buttons {
+          padding: 0 3px;
           background: transparent;
           color: white;
           border: none;
@@ -24,42 +30,30 @@
             color: red;
           }
         }
+
         .cards {
-          padding: 1rem;
           display: flex;
-          gap: 1.5rem;
+          gap: 10px;
           overflow-x: scroll;
           scroll-behavior: smooth;
           &::-webkit-scrollbar {
             display: none;
           }
-          button {
-            background: transparent;
-            color: white;
-            border: none;
-          }
+
           .card {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            border-radius: 10px;
             cursor: pointer;
             transition: 0.2s ease-in-out;
             &:hover {
-              transform: scale(1.1);
-              box-shadow: 0px 0px 8px rgb(248, 248, 249);
-            }
-            p {
-              color: rgb(40, 157, 203);
-              padding-bottom: 10px;
-              font-size: 1.2rem;
+              transform: scale(1.05);
             }
 
             img {
-              border-radius: 10px;
-              width: 220px;
-              height: 300px;
+              width: 150px;
+              height: 200px;
             }
           }
         }
