--- a/src/app/Movies.module.scss
+++ b/src/app/Movies.module.scss
@@ -8,12 +8,12 @@
     .section {
       padding: 0 1rem;
       margin-bottom: 1rem;
-      h1 {
-        padding: 0 1.5rem;
+      // background-color: grey; //remove later
+      h2 {
+        padding: 0.5rem 1.5rem;
       }
 
       .cardsContainer {
-        // background-color: grey;
         display: flex;
         align-items: center;
 
