--- a/src/app/Movies.module.scss
+++ b/src/app/Movies.module.scss
@@ -1,14 +1,13 @@
 .layout {
-  padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
 
   .content {
     .section {
-      padding: 0 1rem;
+      padding: 0 8px;
       margin-bottom: 1rem;
-      // background-color: grey; //remove later
+
       h2 {
         padding: 0.5rem 1.5rem;
       }
@@ -24,7 +23,6 @@
           border: none;
           transition: 0.2s ease-in-out;
           cursor: pointer;
-          z-index: 1;
           &:hover {
             transform: scale(1.5);
             color: red;
@@ -34,11 +32,37 @@
         .cards {
           display: flex;
           gap: 10px;
-          overflow-x: scroll;
+          overflow-x: scroll; //culprits
           scroll-behavior: smooth;
+          position: relative;
           &::-webkit-scrollbar {
             display: none;
           }
+          a {
+            text-decoration: none;
+            color: white;
+            transition: 0.2s ease-in-out;
+            &:hover {
+              transform: scale(1.05);
+              transform-origin: center center;
+            }
+          }
+
+          // .infocards {
+          //   display: flex;
+          //   flex-direction: column;
+          //   transition: 0.2s ease-in-out;
+          //   .info {
+          //     padding: 0 5px;
+          //     display: flex;
+          //     justify-content: space-between;
+          //     align-items: center;
+          //   }
+          //   img {
+          //     width: 250px;
+          //     height: 300px;
+          //   }
+          // }
 
           .card {
             display: flex;
@@ -46,9 +70,17 @@
             justify-content: space-between;
             align-items: center;
             cursor: pointer;
-            transition: 0.2s ease-in-out;
-            &:hover {
-              transform: scale(1.05);
+            transition: 0.4s ease-in-out;
+            position: relative;
+            overflow: visible; //n
+            .hidden {
+              display: none;
+              background-color: rgb(58, 57, 57);
+              .info {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+              }
             }
 
             img {
