--- a/src/app/Movies.module.scss
+++ b/src/app/Movies.module.scss
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-
+  background-color: rgb(11, 11, 11);
   .content {
+    z-index: 1;
+    margin-top: -60px;
     .section {
       padding: 0 8px;
       margin-bottom: 1rem;
-
       h2 {
         padding: 0.5rem 1.5rem;
       }
@@ -24,7 +25,7 @@
           transition: 0.2s ease-in-out;
           cursor: pointer;
           &:hover {
-            transform: scale(1.5);
+            transform: scale(1.3);
             color: red;
           }
         }
@@ -32,62 +33,135 @@
         .cards {
           display: flex;
           gap: 10px;
-          overflow-x: scroll; //culprits
+          overflow-x: auto;
+          width: 100%;
           scroll-behavior: smooth;
-          position: relative;
+
           &::-webkit-scrollbar {
             display: none;
           }
           a {
             text-decoration: none;
-            color: white;
-            transition: 0.2s ease-in-out;
-            &:hover {
-              transform: scale(1.05);
+            .card {
+              display: flex;
+              align-items: center;
+              flex-direction: column;
+              transition: 0.2s ease-in-out;
+              cursor: pointer;
+              transform-origin: top left;
               transform-origin: center center;
-            }
-          }
-
-          // .infocards {
-          //   display: flex;
-          //   flex-direction: column;
-          //   transition: 0.2s ease-in-out;
-          //   .info {
-          //     padding: 0 5px;
-          //     display: flex;
-          //     justify-content: space-between;
-          //     align-items: center;
-          //   }
-          //   img {
-          //     width: 250px;
-          //     height: 300px;
-          //   }
-          // }
-
-          .card {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            cursor: pointer;
-            transition: 0.4s ease-in-out;
-            position: relative;
-            overflow: visible; //n
-            .hidden {
-              display: none;
-              background-color: rgb(58, 57, 57);
-              .info {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
+              border-radius: 5px;
+              background-color: rgb(19, 19, 19);
+              transition: 0.2s ease-in-out;
+              &:first-child {
+                transform-origin: left center;
+              }
+              &:last-child {
+                transform-origin: right center;
+              }
+              img {
+                width: 150px;
+                height: 200px;
+                border-radius: 5px;
+              }
+              &:hover {
+                transform: scale(1.4);
+                transform-origin: center center;
+                box-shadow: 0px 0px 8px #000000;
+                img {
+                  width: 185px;
+                  height: 150px;
+                }
+                .hidden {
+                  display: block;
+                }
+              }
+              .hidden {
+                display: none;
+                width: 100%;
+                .Allinfo {
+                  padding: 5px 2px;
+                  .iconinfo {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 5px 8px 5px 6px;
+                    .svg {
+                      display: flex;
+                      width: 100%;
+                      align-items: center;
+                    }
+                    .dropdown {
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                    }
+                  }
+                  .rowInfo {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    padding-left: 7px;
+                    p {
+                      font-size: 9px;
+                    }
+                    .row1 {
+                      display: flex;
+                      align-items: center;
+                      gap: 5px;
+                      width: 100%;
+                      padding: 3px;
+                      .green {
+                        color: rgb(41, 156, 41);
+                        font-weight: bold;
+                      }
+                      .hd {
+                        border: 1px solid grey;
+                        font-size: 8px;
+                        color: grey;
+                        padding: 0 4px;
+                      }
+                      .curve {
+                        border-radius: 2px;
+                      }
+                      p {
+                        color: rgb(170, 169, 169);
+                      }
+                    }
+                    .row2 {
+                      display: flex;
+                      width: 100%;
+                      align-items: center;
+                      gap: 5px;
+                      padding: 3px;
+                      padding-bottom: 7px;
+                      color: rgb(184, 184, 184);
+                      .grey {
+                        background-color: grey;
+                        height: 3px;
+                        width: 3px;
+                        border-radius: 50%;
+                      }
+                    }
+                  }
+                }
               }
             }
-
-            img {
-              width: 150px;
-              height: 200px;
-            }
           }
+        }
+        .row {
+          &:hover {
+            padding: 100px 0 55px;
+          }
+        }
+        &::-webkit-scrollbar {
+          display: none;
+        }
+      }
+      .rowcontainer {
+        &:hover {
+          margin: -98px 0;
         }
       }
     }
