--- a/src/app/components/Banner/Banner.scss
+++ b/src/app/components/Banner/Banner.scss
@@ -1,10 +1,25 @@
 .banner {
-  height: 90vh;
+  height: 95vh;
   display: flex;
   background-size: cover; //contain
   background-position: center; //right center
   background-attachment: fixed;
   opacity: 1;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgb(0, 0, 0) 100%
+    );
+  }
   a {
     text-decoration: none;
     color: white;
@@ -16,7 +31,7 @@
     width: 100%;
     flex-direction: column;
     justify-content: center;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.4);
     gap: 15px;
     flex: 1;
     h1 {
